algunas correcciones otras no tanto